# bitcoin-micropayments

./: Cargo.toml  README.md
src/: blockchain_info.rs  exchange_rates.rs  main.rs  payment_detection.rs  qr.rs  server.rs
src/scripts/: lsb-init.sh
